<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:layout_margin="10dp">

    <!-- 内容区 -->



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/text_query"
                        android:textColor="@color/text_color_black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_query"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/text_null" />


                </LinearLayout>

                <!--                <include-->
                <!--                    layout="@layout/cut_line"/>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#cdcdcd"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/voice_msg"
                    android:textColor="@color/text_color_black"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/en_voice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/translate_voice_en_text" />

                    <ImageView
                        android:id="@+id/iv_en_voice"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="0dp"
                        android:src="@drawable/voice"/>

                    <TextView
                        android:id="@+id/en_voice_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_null"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/am_voice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/translate_voice_am_text" />

                    <ImageView
                        android:id="@+id/iv_am_voice"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="0dp"
                        android:src="@drawable/voice"/>

                    <TextView
                        android:id="@+id/am_voice_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_null"/>

                </LinearLayout>

                <!--                <include-->
                <!--                    layout="@layout/cut_line"/>-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#cdcdcd"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/base_mean"
                    android:textColor="@color/text_color_black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/base_mean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/text_null" />

                <!--                <include-->
                <!--                    layout="@layout/cut_line"/>-->


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#cdcdcd"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/related_examples"
                    android:textColor="@color/text_color_black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/related_examples"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/text_test" />

            </LinearLayout>

        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>